--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.mvc.format.date=YYYY-MM-DD
+spring.mvc.format.date-time=YYYY-MM-DD HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -6,9 +10,12 @@ logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.zalando.logbook=INFO
 
-# TODO Append connection to DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
+hibernate.show_sql=true
+hibernate.jdbc.time_zone=UTC
+
+spring.datasource.driverClassName =org.postgresql.Driver
+spring.datasource.url =jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username =postgres
+spring.datasource.password =password
