v3 add-bookings Добавлен JPA репозиторий для users

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ hibernate.jdbc.time_zone=UTC
 spring.datasource.driverClassName =org.postgresql.Driver
 spring.datasource.url =jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username =postgres
+# todo shareit
 spring.datasource.password =password
+#todo shareit
