--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,14 @@ spring.mvc.format.date-time=YYYY-MM-DD HH:mm:ss
 spring.mvc.format.time=HH:mm:ss
 
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=TRACE
 logging.level.org.zalando.logbook=INFO
 
 hibernate.show_sql=true
