--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.sql.init.mode=always
 
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=TRACE
+logging.level.org.springframework.transaction.interceptor=INFO
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=INFO
 logging.level.org.zalando.logbook=INFO
 
 hibernate.show_sql=true
@@ -19,6 +19,4 @@ hibernate.jdbc.time_zone=UTC
 spring.datasource.driverClassName =org.postgresql.Driver
 spring.datasource.url =jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username =postgres
-# todo shareit
 spring.datasource.password =password
-#todo shareit
