v8 add-bookings Исправлен application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,5 +18,5 @@ hibernate.jdbc.time_zone=UTC
 
 spring.datasource.driverClassName =org.postgresql.Driver
 spring.datasource.url =jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username =postgres
-spring.datasource.password =password
+spring.datasource.username =shareit
+spring.datasource.password =shareit
