--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ hibernate.show_sql=true
 hibernate.jdbc.time_zone=UTC
 
 spring.datasource.driverClassName =org.postgresql.Driver
-spring.datasource.url =jdbc:postgresql://db:5432/shareit
-spring.datasource.username =shareit
-spring.datasource.password =shareit
+spring.datasource.url =jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username =postgres
+spring.datasource.password =password
